bridge/base/gateway-deployment.yaml
#! gateway-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: gateway
    namespace: ride-hailing-backend
    labels:
        com.docker.compose.project: ride-hailing-backend
        com.docker.compose.service: gateway
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: ride-hailing-backend
            com.docker.compose.service: gateway
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: ride-hailing-backend
                com.docker.compose.service: gateway
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: gateway
                  image: ride-hailing-backend-gateway
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: gateway-80
                      containerPort: 80
