bridge/base/history-service-deployment.yaml
#! history-service-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: history-service
    namespace: ride-hailing-backend
    labels:
        com.docker.compose.project: ride-hailing-backend
        com.docker.compose.service: history-service
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: ride-hailing-backend
            com.docker.compose.service: history-service
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: ride-hailing-backend
                com.docker.compose.service: history-service
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: history-service
                  image: ride-hailing-backend-history-service
                  imagePullPolicy: IfNotPresent
