bridge/base/postgres-deployment.yaml
#! postgres-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: postgres
    namespace: ride-hailing-backend
    labels:
        com.docker.compose.project: ride-hailing-backend
        com.docker.compose.service: postgres
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: ride-hailing-backend
            com.docker.compose.service: postgres
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: ride-hailing-backend
                com.docker.compose.service: postgres
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: postgres
                  image: postgis/postgis:15-3.3
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command:
                            - /bin/sh
                            - -c
                            - pg_isready -U admin -d ridehail
                    periodSeconds: 5
                    timeoutSeconds: 5
                    failureThreshold: 5
                  ports:
                    - name: postgres-5432
                      containerPort: 5432
                  volumeMounts:
                    - name: docker-entrypoint-initdb-d-init-sql
                      mountPath: /docker-entrypoint-initdb.d/init.sql
                    - name: var-lib-postgresql-data
                      mountPath: /var/lib/postgresql/data
            volumes:
                - name: docker-entrypoint-initdb-d-init-sql
                  hostPath:
                    path: C:\Users\admin\OneDrive\Documents\Desktop\PROJECT\ride-hailing-backend\init.sql
                - name: var-lib-postgresql-data
                  persistentVolumeClaim:
                    claimName: postgres-postgres-data
