bridge/base/ride-service-deployment.yaml
#! ride-service-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: ride-service
    namespace: ride-hailing-backend
    labels:
        com.docker.compose.project: ride-hailing-backend
        com.docker.compose.service: ride-service
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: ride-hailing-backend
            com.docker.compose.service: ride-service
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: ride-hailing-backend
                com.docker.compose.service: ride-service
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: ride-service
                  image: ride-hailing-backend-ride-service
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: ride-servi-3001
                      containerPort: 3001
