bridge/base/fare-service-expose.yaml
#! fare-service-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: fare-service
    namespace: ride-hailing-backend
    labels:
        com.docker.compose.project: ride-hailing-backend
        com.docker.compose.service: fare-service
spec:
    selector:
        com.docker.compose.project: ride-hailing-backend
        com.docker.compose.service: fare-service
    ports:
        - name: fare-servi-3003
          port: 3003
          targetPort: fare-servi-3003
