bridge/base/fare-service-service.yaml
# check if there is at least one published port

#! fare-service-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: fare-service-published
    namespace: ride-hailing-backend
    labels:
        com.docker.compose.project: ride-hailing-backend
        com.docker.compose.service: fare-service
spec:
    selector:
        com.docker.compose.project: ride-hailing-backend
        com.docker.compose.service: fare-service
    ports:
        - name: fare-servi-3003
          port: 3003
          protocol: TCP
          targetPort: fare-servi-3003

# check if there is at least one published port
