bridge/base/location-service-expose.yaml
#! location-service-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: location-service
    namespace: ride-hailing-backend
    labels:
        com.docker.compose.project: ride-hailing-backend
        com.docker.compose.service: location-service
spec:
    selector:
        com.docker.compose.project: ride-hailing-backend
        com.docker.compose.service: location-service
    ports:
        - name: location-s-3002
          port: 3002
          targetPort: location-s-3002
